[project.scripts]
pymoments = 'pymoments.scripts:run_pymoments'

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 61.0"]

[project]
authors = [
  {"name" = "Kin Long Kelvin Lee", "email" = "kin.long.kelvin.lee@gmail.com"},
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
]
dependencies = [
    "numpy>=1.19.0",
    "scipy>=1.5.1",
    "mendeleev>=0.6.0",
    "click>=7.1.2"
]
description = "Python CLI and API for calculating inertial properties of molecules"
dynamic = ["version", "readme"]
keywords = ["spectroscopy", "physical-chemistry", "rotational-spectroscopy"]
license = {file = "LICENSE.md"}
name = "pymoments"
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
  "black>=23.9.0",
  "flake8",
  "flake8-pyproject",
  "flake8-black",
  "flake8-bandit",
  "pre-commit",
  "bandit",
  "pytest"
]

[tool.setuptools.packages.find]
include = ["pymoments*"]
where = ["."]

[tool.setuptools.dynamic]
readme = {file = ["README.md"]}
version = {attr = "pymoments.__version__"}
